--- a/_config.yaml
+++ b/_config.yaml
@@ -1,5 +1,5 @@
 title: My Personal Blog
-description: A place for my thoughts and ideas
+description: A place for my random thoughts
 baseurl: ""
 url: "https://yourusername.github.io"
 github_username: yourusername
